--- a/src/Components/MainPage/Cards/index.css
+++ b/src/Components/MainPage/Cards/index.css
@@ -29,8 +29,8 @@
   .rainbow {
     position: relative;
     z-index: 0;
-    width: 80%;
-    height: 600px;
+    width: 1072px;
+    height: 478px;
     border-radius: 10px;
     overflow: hidden;
     background-color: black;
